--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -580,7 +580,8 @@ The call stack tree tool is the first one of the `Flows` tab. It allows you to s
 image::user_guide_images/callstack_tool_tab.png[]
 
 The call stack tree is useful for a high level overview of a complex execution and also as a tool for quickly moving through time.
-You can jump to any point in time by right clicking on any node and then clicking in `Step code`. 
+
+You can jump to any point in time by double clicking on a node or by right clicking and on the context menu selecting `Step code`. 
 
 image::user_guide_images/callstack_tree.png[]
 
