--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -796,19 +796,21 @@ your programs execution. This is all fine but doesn't cover every possible situa
 cases where recording everything is impractical, like in a game loop, since it will consume a lot of heap
 and you are probably not interested in all those frames details.
 
-For situations like the previous one, FlowStorm has the ability to set thread breakpoints, which means to define a point
+For situations like the previous one, FlowStorm has the ability to set thread breakpoints, which means to define a points
 in the execution of your program where you want your threads to block and wait.
 While the threads are waiting you can explore what happened so far. If the recorded information isn't enough you can
-click the play buttons next to each blocked thread to tell it to continue until it hits the breakpoint again. Then
+click the play buttons next to each blocked thread to tell it to continue until it hit a breakpoint again. Then
 you can analyse the new recordings. Once you are done, you can choose to uninstrument
 your functions, or maybe easier to just pause recording using the pause button in the main toolbar. Then you
 can remove the break and unblock every thread.
 
-You can define breaks in two ways :
+You can define thread breakpoints in two ways :
 
-- Using the browser, you can navigate to any function and click on the `Break` button. This will block the calling
+- Using the browser (like in the image below), you can navigate to any function and click on the `Break` button. This will block the calling
   thread everytime the selected function gets called.
 - Or you can also install a break by calling (flow-storm.api/break-at 'my-proj.core/some-fn)
+
+image::user_guide_images/browser_breakpoints.png[]
 
 [NOTE]
 .Conditional threads breakpoints
@@ -818,7 +820,11 @@ of the function you are breaking. It will only break when the predicate returns 
 provide a predicate it will default to `(constantly true)`
 ====
 
-To remove the current break, click the remove break button on the main toolbar.
+You can remove breakpoints by :
+
+- Clicking on the browser intrumentation list delete buttons
+- Calling `flow-storm.api/remove-break` to remove a single breakpoint
+- Calling `flow-storm.api/clear-breaks` to remove all breakpoints
 
 == The tool bar
 
@@ -830,7 +836,6 @@ From left to right :
 
 - Clean all. Will clean all flows, taps and every value the debugger is retaining.
 - Cancel current running task. If the debugger is taking too long with something and you want to cancel it use this button.
-- Remove break. Remove the current thread break. See thread breaks
 - Start/Stop recording. You can keep code instrumented but keep your heap from growing by stopping recording when you are not debugging.
 
 == Debug cmd line programs (clj -X, clj -m, etc)
