--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -799,8 +799,9 @@ and you are probably not interested in all those frames details.
 For situations like the previous one, FlowStorm has the ability to set thread breakpoints, which means to define a points
 in the execution of your program where you want your threads to block and wait.
 While the threads are waiting you can explore what happened so far. If the recorded information isn't enough you can
-click the play buttons next to each blocked thread to tell it to continue until it hit a breakpoint again. Then
-you can analyse the new recordings. Once you are done, you can choose to uninstrument
+click the play buttons next to each blocked thread to tell it to continue until it hit a breakpoint again, or right
+click on any of the blocked threads and selecting `Unblock all threads` to unlock all of them.
+Then you can analyse the new recordings. Once you are done, you can choose to uninstrument
 your functions, or maybe easier to just pause recording using the pause button in the main toolbar. Then you
 can remove the break and unblock every thread.
 
